<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.parkjin.quiz.ui.question_list.QuestionListViewModel" />
    </data>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:padding="20dp"
           android:visibility="@{viewModel.isVisible ? View.GONE : View.VISIBLE}"
           android:gravity="center_horizontal"
           android:orientation="vertical"
           tools:visibility="gone">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:textSize="20sp"
               android:textColor="@color/black"
               android:text="@string/text_password" />

           <com.google.android.material.textfield.TextInputLayout
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:hint="@string/text_password"
                   android:text="@={viewModel.passwordText}"
                   android:backgroundTint="@color/white" />
           </com.google.android.material.textfield.TextInputLayout>

           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:onClick="@{() -> viewModel.onClickStart()}"
               android:text="@string/text_get_in" />
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:visibility="@{viewModel.isVisible ? View.VISIBLE : View.GONE}"
           android:gravity="center"
           android:orientation="vertical"
           tools:visibility="visible">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_vertical"
               android:padding="10dp">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/black"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   android:text="@string/app_name"/>

               <View
                   android:layout_width="0dp"
                   android:layout_height="0dp"
                   android:layout_weight="1" />

               <ImageView
                   android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:src="@drawable/ic_add"
                   android:onClick="@{() -> viewModel.onClickQuestion()}" />
           </LinearLayout>

           <androidx.recyclerview.widget.RecyclerView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginTop="20dp"
               android:overScrollMode="never"
               app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
               app:adapter="@{viewModel.quizAdapter}"/>
       </LinearLayout>
   </androidx.constraintlayout.widget.ConstraintLayout>
</layout>